[gd_scene load_steps=2 format=3 uid="uid://ccsjhqnnoaker"]

[ext_resource type="Script" path="res://UI/Scripts/name_screen.gd" id="1_c1xr7"]

[node name="NameScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c1xr7")
scene_text_file = "res://UI/Dialogue/DialogueExample.json"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -73.5
offset_right = 100.0
offset_bottom = 73.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="VBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Name"

[node name="NameLineEdit" type="LineEdit" parent="VBoxContainer2/VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="ConfirmButton" type="Button" parent="VBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Confirm"

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer2"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
alignment = 1

[node name="CharacterNameRichTextLabel" type="RichTextLabel" parent="VBoxContainer2/VBoxContainer2"]
custom_minimum_size = Vector2(512, 0)
layout_mode = 2
size_flags_horizontal = 0
bbcode_enabled = true
fit_content = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2/VBoxContainer2"]
layout_mode = 2

[node name="Control" type="Control" parent="VBoxContainer2/VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2

[node name="DialogueRichTextLabel" type="RichTextLabel" parent="VBoxContainer2/VBoxContainer2/HBoxContainer"]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
bbcode_enabled = true
fit_content = true

[node name="LoadNameLabel" type="Label" parent="."]
layout_mode = 1
offset_right = 99.0
offset_bottom = 23.0
